# downloader_tool

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  DEPLOY.md  Dockerfile  README.md  biome.json  docker-compose.yml  next.config.ts  package.json  pnpm-lock.yaml
.github/workflows/: deploy.yml  release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
src/app/api/download/: route.ts
src/app/api/file/: route.ts
src/app/api/trpc/[trpc]/: route.ts
src/components/: downloader.tsx
src/components/downloader/: arc-progress.tsx  audio-format-grid.tsx  audio-quality-selector.tsx  audio-tab.tsx  container-selector.tsx  download-button.tsx  extra-toggles.tsx  format-panel.tsx  progress-dialog.tsx  progress-info.tsx  quality-chip.tsx  quality-selector.tsx  url-input.tsx  video-meta.tsx  video-preview.tsx  video-tab.tsx  video-thumbnail.tsx
src/components/layout/: bg-orbs.tsx  site-header.tsx
src/hooks/: use-download.ts  use-video-info.ts
src/lib/: download-options.ts  time.ts  yt-format.ts
src/schemas/: downloader.ts
src/server/routers/: _app.ts  youtube.ts
src/types/: downloader.ts
