[package]
name = "tubegrab"
version = "0.1.0"
description = "TubeGrab YouTube Downloader"
authors = ["FapaKslapa"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2" }

[dependencies]
tauri = { version = "2.11.0" }
tauri-plugin-shell = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
tokio = { version = "1.35", features = ["full"] }
