[package]
name = "tubegrab"
version = "0.2.15"
description = "TubeGrab YouTube Downloader"
authors = ["FapaKslapa"]
edition = "2021"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2.11.0", features = [] }
tauri-plugin-shell = { version = "2" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
regex = "1.10"
tokio = { version = "1.35", features = ["full"] }
